Setup app for Heroku

--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -74,7 +74,9 @@
                     <input type="text" placeholder="Mobile Number" id="mobilenumber">
                     <br>
                     <br>
-                    <input type="button" value="LOGIN" onclick="validate()"></button>
+                    <input type="button" value="LOGIN" ></button>
+
+                    {{!-- onclick="validate()" --}}
                     
                     
 				</form>
