Add validate function

--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -74,9 +74,7 @@
                     <input type="text" placeholder="Mobile Number" id="mobilenumber">
                     <br>
                     <br>
-                    <input type="button" value="LOGIN" ></button>
-
-                    {{!-- onclick="validate()" --}}
+                    <input type="button" value="LOGIN" onclick="validate()"></button>
                     
                     
 				</form>
