--- a/templates/views/page10.hbs
+++ b/templates/views/page10.hbs
@@ -48,17 +48,19 @@
             height: 122px;
             width: auto;
         }
-       header h3
+        header h3
        {
            color: white;
             padding-top: 20px;
+            font-size: x-large;
        }
+
        header span
        {
            color: white;
           text-align: center;
            font-size: 18px;
-           margin-left: 230px;
+           margin-left: 245px;
        }
        .login
 		{
@@ -152,7 +154,7 @@
         .loginpage h3
        {
            text-align: left;
-           font-size: 24px;
+           font-size: x-large;
            margin-bottom: 30px;
            line-height: 35px;
            margin-top: 30px;
