--- a/templates/views/page11.hbs
+++ b/templates/views/page11.hbs
@@ -124,6 +124,25 @@
             
         }
         
+
+        header h3
+       {
+           color: white;
+            padding-top: 20px;
+            font-size: x-large;
+       }
+
+       header span
+       {
+           color: white;
+          text-align: center;
+           font-size: 18px;
+           margin-left: 245px;
+       }
+
+       
+
+
         
         h3 {
   color: black;
