--- a/templates/views/page12.hbs
+++ b/templates/views/page12.hbs
@@ -17,7 +17,7 @@
     <style>
         body
         {
-            background-image: url(images/Rectangle%206.png);
+            background-image: url(img/Rectangle%206.png);
             background-repeat: no-repeat;
             background-size: cover;
             overflow-x: hidden;
@@ -308,15 +308,15 @@ function closeNav() {
                     <br>
                     <div class="pic1">
                         <p>Mentor Speech</p><br>
-                   <img src="images/Image%20123.png" alt="image1">
+                   <img src="img/Image%20123.png" alt="image1">
                   </div>
                     
                      <div class="pic2">
-                   <img src="images/Image%20122.png" alt="image2">
+                   <img src="img/Image%20122.png" alt="image2">
                   </div>
                     
                     <div class="pic3">
-                   <img src="images/Image%20126.png" alt="image3">
+                   <img src="img/Image%20126.png" alt="image3">
                  </div>
                     
                 </cenetr>
